--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,44 @@
+# Dependencies
 node_modules
 dist
 .DS_Store
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build files
+/build
+/dist
+/.next
+/.nuxt
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Database
+*.sqlite
+*.db
+
+# Testing
+/coverage
+
+# Temporary files
+*.log
+*.tmp
+.temp
